Buffer holds reference to CompositorFrameSinkHolder so the CompositorFrameSinkHolder lives until resources are released or Buffer is destroyed.

CompositorFrameSinkHolder no longer holds references to itself in the field
release_callback_.

BUG=675004

Review-Url: https://codereview.chromium.org/2584953002
Cr-Commit-Position: refs/heads/master@{#441269}

Former-commit-id: d40f036aa8e40227403313246418c4ce8b908368